<?xml version="1.0"?>
<package format="2">
  <name>urg_visualize_test</name>
  <version>0.0.0</version>
  <description>The urg_visualize_test package</description>
  <maintainer email="vghjjj@gmail.com">shotahirama</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
